[gd_scene load_steps=20 format=2]

[ext_resource path="res://imagens/mini_games/mini_game_2/imagens_letras/image-removebg-preview (1).png" type="Texture" id=1]
[ext_resource path="res://imagens/mini_games/mini_game_2/imagens_letras/image__1_-removebg-preview.png" type="Texture" id=2]
[ext_resource path="res://imagens/mini_games/mini_game_2/imagens_letras/image__2_-removebg-preview.png" type="Texture" id=3]
[ext_resource path="res://imagens/mini_games/mini_game_2/imagens_letras/image__4_-removebg-preview.png" type="Texture" id=4]
[ext_resource path="res://imagens/mini_games/mini_game_2/imagens_letras/image__3_-removebg-preview.png" type="Texture" id=5]
[ext_resource path="res://imagens/mini_games/mini_game_2/imagens_forca/New Piskel (3).png" type="Texture" id=6]
[ext_resource path="res://imagens/mini_games/mini_game_2/imagens_forca/pix2.png" type="Texture" id=7]
[ext_resource path="res://imagens/mini_games/mini_game_2/imagens_forca/pix.png" type="Texture" id=8]
[ext_resource path="res://imagens/mini_games/mini_game_2/imagens_forca/forca (5).png" type="Texture" id=9]
[ext_resource path="res://imagens/mini_games/mini_game_2/imagens_forca/New Piskel (5).png" type="Texture" id=10]
[ext_resource path="res://imagens/mini_games/mini_game_2/imagens_forca/inicial.png" type="Texture" id=11]
[ext_resource path="res://imagens/mini_games/mini_game_2/imagens_forca/New Piskel.png" type="Texture" id=12]
[ext_resource path="res://imagens/mini_games/mini_game_2/imagens_forca/5.png" type="Texture" id=13]
[ext_resource path="res://imagens/mini_games/mini_game_2/imagens_forca/New Piskel (4).png" type="Texture" id=14]
[ext_resource path="res://imagens/mini_games/mini_game_2/imagens_forca/confirmar.png" type="Texture" id=15]
[ext_resource path="res://scripts/mini_games/mini_game_2/forca.gd" type="Script" id=16]
[ext_resource path="res://fontes/PTSansNarrow-Regular.ttf" type="DynamicFontData" id=17]

[sub_resource type="DynamicFont" id=1]
size = 31
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 17 )

[node name="forca" type="Node2D"]
script = ExtResource( 16 )

[node name="Barpix" type="Sprite" parent="."]
position = Vector2( 513.091, 256.187 )
scale = Vector2( 0.619675, 0.616554 )
texture = ExtResource( 8 )

[node name="Pix2" type="Sprite" parent="Barpix"]
position = Vector2( 14.3777, 25.6466 )
scale = Vector2( 1.04852, 0.984543 )

[node name="Pix" type="Sprite" parent="Barpix"]
position = Vector2( 8.33728, 62.9507 )
scale = Vector2( 1.01397, 0.9521 )

[node name="Pix2" type="Sprite" parent="Barpix/Pix"]
position = Vector2( 1091.37, 28.9606 )
scale = Vector2( 1.33857, 1.22204 )
texture = ExtResource( 7 )

[node name="fim" type="Sprite" parent="."]
visible = false
position = Vector2( 493, 272 )
scale = Vector2( 2.53125, 2.10938 )

[node name="a" type="Sprite" parent="."]
position = Vector2( 692, 352 )
scale = Vector2( 0.802632, 0.802632 )
texture = ExtResource( 4 )

[node name="c" type="Sprite" parent="."]
position = Vector2( 565, 358 )
scale = Vector2( 0.712766, 0.712766 )
texture = ExtResource( 5 )

[node name="frame" type="Sprite" parent="."]
position = Vector2( 514, 301 )
texture = ExtResource( 9 )

[node name="corpocab" type="Sprite" parent="."]
visible = false
position = Vector2( 513, 302 )
texture = ExtResource( 13 )

[node name="cabeca" type="Sprite" parent="."]
visible = false
position = Vector2( 513, 303 )
texture = ExtResource( 12 )

[node name="inicial" type="Sprite" parent="."]
visible = false
position = Vector2( 512, 304 )
texture = ExtResource( 10 )

[node name="sp1" type="Sprite" parent="."]
visible = false
position = Vector2( 513, 305 )
texture = ExtResource( 14 )

[node name="spt" type="Sprite" parent="."]
visible = false
position = Vector2( 511, 304 )
texture = ExtResource( 6 )

[node name="braco" type="Sprite" parent="."]
visible = false
position = Vector2( 512, 303 )
texture = ExtResource( 11 )

[node name="E" type="Sprite" parent="."]
position = Vector2( 177, 348 )
scale = Vector2( 0.622222, 0.622222 )
texture = ExtResource( 1 )

[node name="t" type="Sprite" parent="."]
position = Vector2( 308, 351.719 )
scale = Vector2( 0.658537, 0.658536 )
texture = ExtResource( 2 )

[node name="i" type="Sprite" parent="."]
position = Vector2( 443, 350 )
scale = Vector2( 0.712766, 0.712766 )
texture = ExtResource( 3 )

[node name="letra" type="LineEdit" parent="."]
margin_left = 639.0
margin_top = 479.0
margin_right = 707.0
margin_bottom = 534.0

[node name="Button" type="TextureButton" parent="."]
margin_left = 738.0
margin_top = 481.0
margin_right = 817.0
margin_bottom = 528.0
texture_normal = ExtResource( 15 )

[node name="erros" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 81.0
margin_top = 467.0
margin_right = 616.0
margin_bottom = 555.0
align = 1
valign = 1

[node name="dica" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 413.0
margin_top = 37.0
margin_right = 981.0
margin_bottom = 197.0
custom_fonts/font = SubResource( 1 )
text = "Para trabalhar na V.Tal é importante ter essa característica e seguir restritamente ela para manter um ambiente de trabalho confortável e seguro."
autowrap = true

[node name="reiniciar" type="Button" parent="."]
margin_left = 784.0
margin_top = 275.0
margin_right = 930.0
margin_bottom = 348.0
text = "JOGAR DE NOVO"

[node name="sair" type="Button" parent="."]
margin_left = 784.0
margin_top = 364.0
margin_right = 932.0
margin_bottom = 438.0
text = "SAIR PRO MAPA"

[node name="ganhou" type="Label" parent="."]
margin_left = 351.0
margin_top = 215.0
margin_right = 591.0
margin_bottom = 280.0
custom_fonts/font = SubResource( 2 )
text = "Você acertou!"

[connection signal="text_entered" from="letra" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="reiniciar" to="." method="_on_reiniciar_pressed"]
[connection signal="pressed" from="sair" to="." method="_on_sair_pressed"]
